# AiAgentRag

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.ai/: architecture.md  coding_rules.md  milestones.md  project_structure.md  prompts.md  public_api.md  rag_pipeline.md  roadmap.md  tech_stack.md
.github/workflows/: publish.yml  release.yml  test.yml  workflow.yml
scripts/: __init__.py  modal_llm_service.py  try_agent.py
src/aiagentrag/: __init__.py  container.py
src/aiagentrag/agent/: __init__.py  agent.py
src/aiagentrag/core/: __init__.py  events.py  exceptions.py  interfaces.py  models.py
src/aiagentrag/knowledge/: __init__.py  retriever.py
src/aiagentrag/llm/: provider.py
src/aiagentrag/memory/: __init__.py  compressor.py  repository.py
src/aiagentrag/prompt/: __init__.py  builder.py
src/aiagentrag/providers/: __init__.py
src/aiagentrag/providers/modal/: __init__.py  config.py  embeddings.py  llm.py  rpc.py
src/aiagentrag/providers/ollama/: __init__.py  embeddings.py  llm.py
src/aiagentrag/providers/openai/: __init__.py  embeddings.py  llm.py
src/aiagentrag/storage/postgres/: __init__.py  alembic.ini  cli.py  migration.py  migrations.py  models.py  store.py
src/aiagentrag/storage/postgres/alembic/: env.py
src/aiagentrag/storage/postgres/alembic/versions/: 001_initial_messages.py
src/aiagentrag/storage/qdrant/: __init__.py  client.py  schema.py
tests/: __init__.py  conftest.py
tests/integration/: test_agent_pipeline.py
tests/unit/: test_agent.py  test_compressor.py  test_events.py  test_exceptions.py  test_knowledge_retriever.py  test_memory_repository.py  test_migration.py  test_migration_packaging.py  test_modal_providers.py  test_models.py  test_prompt_builder.py  test_qdrant_schema.py  test_qdrant_store.py
